@@ -6,6 +6,7 @@ Version 0.14
  Logger: Baudrate guesser
  Logger: Baudrate upgrader
  Move obd comms into separate library
+ Sim: Multiple ECU support [attach a generator for each ecu]
 
 Version 0.13 (released 2010-02-27)
  Opensolaris packaging [for jucr]
